fixed localstorage issue on mobile and apple

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,11 @@ textarea {
   font-weight: 600;
 }
 
+.description {
+  white-space: pre-wrap;
+}
+
+
 .container {
   padding: 0;
 }
